--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ header.main_nav{
 ______________________________________*/
 
 img{
-	
+
 	width: 100%;
 	border-radius: 20px;
 }
@@ -78,7 +78,7 @@ img.avatar{
 img:hover{ opacity:0.8;}
 
 /* Footer
-______________________________________*/ 
+______________________________________*/
 
 ul.social{
 	display: block;
@@ -105,12 +105,12 @@ p.copyright{
 	text-align: center;
 	color: #666;
 	font-size: 1em;
-} 
+}
 footer{
 	background-color:#E6E6E6;
 }
-	
- 
+
+
  /* Media Queries
 ______________________________________*/
 
@@ -122,4 +122,11 @@ ______________________________________*/
 	h2.bio{font-size: 2.5em;}
 	p.bio{font-size:1.25em; color: #3f7f7c;}
 	ul.social li a{font-size: .75em;}
+}
+
+/*Added Styles
+______________________________________*/
+.l-list-position{
+	position: relative;
+	left: 120px;
 }
