--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,20 @@
 
 /* General Content
 ______________________________________*/
+
+
+.services_l{
+	list-style-type: none; 
+	text-align: center;
+}
+
+.services_r{
+	list-style-type: none; 
+	text-align: center;
+}
+
 .logo {
-	width: 70%;
+	width: 100%;
 	margin-top: 1%;
 }
 .main{padding-top:3%;}
@@ -28,7 +40,7 @@ ______________________________________*/
   padding: 0 20px;
   box-sizing: border-box; }
 a:link {
-	color: black;
+	color: red;
 	text-decoration: none;
 }
 a:visited {
@@ -37,7 +49,7 @@ a:visited {
 }
 a:hover {
 	text-decoration: none;
-	color: rgba(255,0,0,1);
+	color: white;
 }
 a:active {
 	text-decoration: none;
@@ -46,8 +58,7 @@ a:active {
 /* Typography
 ______________________________________*/
 
-body{
-}
+
 h2, p.footer{
 	text-align: center;
 }
@@ -59,18 +70,15 @@ header.main_nav{
 	display: block;
 	text-align: center;
 	font-size: 2em;
+	background-color: #2E2EFF;
 }
 a.nav:hover{
-	background-color: blue;
+	background-color: red;
 	
 }
 a.nav{
 	border: 0 solid black;
 	padding: .6%;
-}
-
-nav{
-	border-radius: 15px;
 }
 
 /* Images & Media
@@ -81,9 +89,8 @@ img{
 	width: 100%;
 	border-radius: 20px;
 }
-img.avatar{
-	border-radius:500px;
-	border: 5px solid #fff;
+img.logo{
+	border-radius: 0;
 }
 img:hover{ opacity:0.8;}
 
@@ -132,4 +139,59 @@ ______________________________________*/
 	h2.bio{font-size: 2.5em;}
 	p.bio{font-size:1.25em; color: #3f7f7c;}
 	ul.social li a{font-size: .75em;}
+}
+/*
+@media (min-width: 400px){
+	.services_l{
+		list-style-type: none; 
+		text-align: center;
+		padding-left: 0;
+		margin-right: 0;
+	}
+	.services_r{
+		list-style-type: none; 
+		text-align: center;
+		padding-right: 0;
+		margin-left: 0;
+	}
+}
+*/
+@media (min-width: 550px) {
+	.services_l{
+		padding-left: 40%;
+	}
+	.services_r{
+		padding-right: 40%;
+	}
+}
+
+@media (min-width: 750px){
+	.services_l{
+		padding-left: 60%;
+	}
+	.services_r{
+		padding-right: 60%;
+	}
+}
+
+@media (min-width: 1000px) {
+	.services_l{
+		padding-left: 70%;
+		margin-right: -7%;
+	}
+	.services_r{
+		padding-right: 70%;
+		margin-left: -7%;
+	}
+}
+
+@media (min-width: 1200px) {
+	.services_l{
+		padding-left: 80%;
+		margin-right: -5%;
+	}
+	.services_r{
+		padding-right: 80%;
+		margin-left: -5%;
+	}
 }
