--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,17 @@ ______________________________________*/
 	left: 85px;
 }
 
+/*About Page Styles
+_____________________________________*/
+.about-text{
+	border: 3px solid red;
+	height: 400px
+}
+
+.move{
+	position: relative;
+}
+
 
  /* Media Queries
 ______________________________________*/
