About Page: Fix Alignment of Team Members | Home Page: Tweak home page alignment

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@
 ______________________________________*/
 
 h4{
-color: blue;
+	font-family: 'Roboto', sans-serif;
+	color: blue;
 }
 .services_l{
 	/*list-style-type: none;*/
@@ -29,12 +30,15 @@ color: blue;
 	margin-top: 0;
 	margin-left: -0.6%;
 }
-.main{padding-top:3%;}
-.row{padding: 4.35% 1%;}
+
+.main{padding-top: 3%;}
+
+.row{padding: 2% 1%;}
+
 .blue{background-color: #6666;}
-.gallery{
-	padding-top: 1%;
-}
+
+.gallery{padding-top: 1%;}
+
 .contact {
   position: relative;
   width: 100%;
@@ -71,7 +75,7 @@ ______________________________________*/
 header.main_nav{
 	height: 38px;
 	padding: 0.1% 0;
-	margin-left: -20px;
+	margin-left: -18px;
 	display: block;
 	text-align: center;
 	font-size: 1.6em;
@@ -91,7 +95,7 @@ a.nav{
 	/* margin: -0.6%; */
 	margin-left: -1.1%;
 	padding-top: 2%;
-	padding-bottom: 0.6%;
+	padding-bottom: 0.61%;
 	padding-left: 3%;
 	padding-right: 3%;
 	/* background: black; */
@@ -104,7 +108,6 @@ a.nav{
 ______________________________________*/
 
 img{
-
 	width: 100%;
 	border-radius: 20px;
 }
@@ -154,6 +157,9 @@ footer{
 
 /* Services Section On Home Page
 ______________________________________*/
+.align-services{
+	margin-left: 16px;
+}
 .services{
 	margin-left: -15px;
 }
@@ -164,31 +170,44 @@ ______________________________________*/
 }
 .leftlist{
 	position: relative;
-	left: 85px;
+	left: 49px;
 }
 .rightlist{
 	position: relative;
-	left: 85px;
+	left: 105px;
+}
+
+/*Home page below services section
+_____________________________________*/
+.main-display{
+	margin-left: -2.1em;
+	width: 101.8%;
 }
 
 /*About Page Styles
 _____________________________________*/
+.about-align{
+	height: 400px;
+}
 .about-text{
-	border: 3px solid red;
-	height: 400px
+	font-size: 18px;
+	letter-spacing: 1px;
+	height: 690px;
+}
+.about-text-small{
+	font-size: 18px;
+	letter-spacing: 1px;
+	height: 135px;
 }
 .image-space{
-    position: relative;
-    padding: 40px;
-    margin: auto;    
-    float: left;
-    display: block;
-    vertical-align: middle
+  position: relative;
+  padding: 40px;
+  margin: auto;
+  float: left;
+  display: block;
+  vertical-align: middle;
 }
 
-.move{
-	position: relative;
-}
 
 
  /* Media Queries
