--- a/css/normalize.css
+++ b/css/normalize.css
@@ -7,7 +7,7 @@
  */
 
 html {
-  font-family: sans-serif; /* 1 */
+  -font-family:  sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -248,6 +248,13 @@ samp {
  * 2. Correct font properties not being inherited.
  * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
  */
+
+form{
+	position: absolute;
+	top: 50%
+	border: 3px solid green;
+	height: 50px;
+}
 
 button,
 input,
