--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 /* General Content
 ______________________________________*/
 
+
 h4{
 	font-family: 'Roboto', sans-serif;
 	color: blue;
@@ -73,7 +74,7 @@ h2, p.footer{
 ______________________________________*/
 
 header.main_nav{
-	height: 38px;
+	height: 40px;
 	padding: 0.1% 0;
 	margin-left: -18px;
 	display: block;
@@ -91,7 +92,7 @@ a.nav:hover{
 
 }
 a.nav{
-	border-right: 2px solid white;
+	
 	/* margin: -0.6%; */
 	margin-left: -1.1%;
 	padding-top: 2%;
@@ -119,6 +120,14 @@ img:hover{ opacity:0.8;}
 .image-container{
 	margin-left: -5%;
 }
+
+/* Contact Form
+______________________________________*/
+#form-container{
+	margin-top: 18em;
+
+}
+
 
 /* Footer
 ______________________________________*/
@@ -153,6 +162,26 @@ footer{
 	background-color:#E6E6E6;
     text-align: center
 }
+
+#footer-container{
+margin-top: 18em
+}
+
+/* Button 
+______________________________________*/
+#btn-container{ 
+		/*margin-right: 12px;*/
+	position: absolute;
+	left: 27em;
+	margin-top: -7%;
+	 
+}
+	
+.btn-text{
+	text-align: center;
+
+}
+
 
 
 /* Services Section On Home Page
