--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ img:hover{ opacity:0.8;}
 /* Contact Form
 ______________________________________*/
 #form-container{
-	margin-top: 18em;
+	margin-top: 24em;
 
 }
 
@@ -160,7 +160,9 @@ p.copyright{
 }
 footer{
 	background-color:#E6E6E6;
-    text-align: center
+ text-align: center;
+	font-size: 18px;
+	letter-spacing: 1px;
 }
 
 #footer-container{
