--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -227,8 +227,8 @@ input[type="button"].button-primary {
   color: #FFF;
   background-color: #33C3F0;
   border-color: #33C3F0; }
-.button.button-primary:hover,
-button.button-primary:hover,
+.button.button-primary:
+button.button-primary:
 input[type="submit"].button-primary:hover,
 input[type="reset"].button-primary:hover,
 input[type="button"].button-primary:hover,
