--- a/css/style.css
+++ b/css/style.css
@@ -54,11 +54,11 @@ a:link {
 }
 a:visited {
 	text-decoration: none;
-	color: white;
+	color: blue;
 }
 a:hover {
 	text-decoration: none;
-	color: white;
+	color: blue;
 }
 a:active {
 	text-decoration: none;
@@ -111,7 +111,15 @@ a.nav{
 
 /* Images & Media
 ______________________________________*/
-
+.home-img{
+	margin-bottom: 20px;
+}
+.home-img-l{
+	margin-right: -4px;
+}
+.home-img-r{
+	margin-left: 3%;
+}
 img{
 	width: 100%;
 	border-radius: 20px;
@@ -171,7 +179,14 @@ footer{
 }
 
 #footer-container{
-margin-top: 18em
+	position: absolute;
+	top: 65em;
+	margin-left: 4em;
+}
+
+#footer-container2{
+	margin-top: 22em;
+	margin-left: -7em;
 }
 
 /* Button
@@ -179,8 +194,8 @@ ______________________________________*/
 #btn-container{
 		/*margin-right: 12px;*/
 	position: absolute;
-	left: 27em;
-	margin-top: -7%;
+	left: 44em;
+	margin-top: 2%;
 
 }
 
@@ -199,6 +214,10 @@ ______________________________________*/
 .services{
 	margin-left: -15px;
 }
+.list-container{
+	/*border: blue solid 2px;*/
+	width: 32%!important;
+}
 .lists{
 	font-family: 'Roboto', sans-serif;
 	font-size: 28px;
@@ -206,19 +225,22 @@ ______________________________________*/
 }
 .leftlist{
 	position: relative;
-	/*left: 49px;*/
-	margin-left: 5%;
+	left: -10.6em;
+	top: 2.6em;
 }
 .rightlist{
 	position: relative;
-	left: 105px;
+	left: 26.15em;
+	top: 2.6em;
 }
 
 /*Home page below services section
 _____________________________________*/
 .main-display{
-	margin-left: 0em;
-	width: 96.8%;
+	position: relative;
+	top: -22em;
+	margin-left: 8.5em;
+	width: 81%;
 }
 
 /*About Page Styles
