Change Employee Title Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ ______________________________________*/
 h4{
 	font-family: 'Roboto', sans-serif;
 	color: blue;
+	width: 133%
 }
 .services_l{
 	/*list-style-type: none;*/
