--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -182,10 +182,10 @@ input[type="submit"],
 input[type="reset"],
 
 .hamburger{
-    width: 35px;
-    height: 5px;
+    width: 68px;
+    height: 31px;
     background-color: black;
-    margin: 6px 0;
+    margin: 83px 172px;
 }
 
 
